addition of image and paragraphs and some styling

--- a/index.html
+++ b/index.html
@@ -25,5 +25,20 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Slimobedsama</a>.
   </div>
+  <div class="contents">
+    <div class="card">
+      <div class="card-img">
+        <img src="/images/image-qr-code.png" alt="qr-code">
+      </div>
+      <div class="card-txt">
+        <p class="bold-txt">
+          Improve your front-end skills by building projects
+        </p>
+        <p class="light-txt">
+          Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+        </p>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
